fix:delete hr, add link for bottom btn & alignet btn

--- a/src/components/DoctorSlider/Doctor.module.scss
+++ b/src/components/DoctorSlider/Doctor.module.scss
@@ -42,7 +42,7 @@
                 grid-gap: .5em;
                 height: 95px;
                 max-height: 105px;
-
+                margin-bottom: 10px;
                     a{
                         font-weight: 500;
                         font-size: 17px;
@@ -62,9 +62,6 @@
                         color: #000000;
                     }
                 }
-                hr{
-                    margin: 10px 0;
-                }
                 .other{
                     display: flex;
                     justify-content: space-between;
@@ -72,10 +69,13 @@
                     font-weight: 400;
                     font-size: 11px;
                     line-height: 13px;
+                    border-top: 1px solid #cecece;
+                    height: 75px;
                     .other_text{
                         display: flex;
-                        flex-direction: column;
-                        grid-gap: 1.5em;
+                        height: 60px;
+                        flex-wrap: wrap;
+                        align-content: space-between;
                         p{
                             color: #0097DB;
                         }
