--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -254,6 +254,25 @@
   }
 }
 
+.doctor_slider{
+  .slick-arrow {
+    width: 15px;
+    height: 15px;
+    transform: 0.3s;
+  }
+
+  .slick-prev {
+    transform: rotate(180deg);
+    top: 50%;
+    left: -50px;
+  }
+
+  .slick-next {
+    top: 50%;
+    right: -50px;
+  }
+}
+
 .main_slider {
   .slick-disabled.slick-disabled {
     filter: invert(94%) sepia(0%) saturate(0%) hue-rotate(173deg) brightness(83%) contrast(94%);
